# secure-web-browser

./: .gitignore  build.js  build.mjs  package-lock.json  package.json
.github/workflows/: build.yml
client/: package-lock.json  package.json
client/.next/: trace
client/.next/cache/: .rscinfo
client/.next/cache/webpack/client-development/: index.pack.gz.old
client/.next/cache/webpack/server-development/: index.pack.gz.old
client/.next/server/: server-reference-manifest.json
client/src/app/: page.tsx
client/src/app/logout/: page.tsx
client/src/components/: Exit.tsx  Server.tsx
mapper/: Cargo.toml
mapper/src/: interceptor.ahk  lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs
src-tauri/src/utils/: commands.rs  installer.rs  key_mapper.rs  mod.rs  types.rs
