[package]
name = "mapper"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version="0.60.0", features = ["Win32_System_RemoteDesktop", "Win32_Foundation", "Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }


[dependencies]