[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
mac_address = "1.1.8"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
usb_enumeration = "0.2.1"
tokio-task-scheduler = "1.0.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.35.2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
thiserror = "2.0.12"
derive_more = { version="2.0.1", features = ["full"] }
tauri-plugin-store = "2"
tokio_schedule = "0.3.2"


[target.'cfg(target_os = "windows")'.dependencies]
windows = {version="0.60.0", features = ["Win32_System_RemoteDesktop", "Win32_Foundation", "Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
raw-cpuid = "11.5.0"
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
